--- a/Goli-Soda/angular.json
+++ b/Goli-Soda/angular.json
@@ -23,6 +23,11 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
+            "optimization": {
+              "fonts": {
+                "inline": false
+              }
+            },
             "assets": [
               "src/favicon.ico",
               "src/assets"
